# opencvClotheDetectionTrial

./: .gitignore  CMakeLists.txt  DisplayImage.hpp  backgroundRemover.hpp  bodyDetector.hpp  generic.hpp  kmeans_sample.cpp  main.cpp  skinDetectorFromNet.hpp
